# telegram-antivirus-bot

./: .dockerignore  .env.dev  .env.docker  .gitignore  .isort.cfg  Dockerfile  Makefile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
application/: config.py  main.py  utils.py
